k8s/otel-collector.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  selector:
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/name: opentelemetry-collector
    component: agent-collector
  clusterIP: None
  ports:
    - port: 13133
      targetPort: 13133
# curl http://otel-collector.default:13133
# curl http://otel-collector-opentelemetry-collector.default:13133
