k8s/apps-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marco
  labels:
    fluentd.logger: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marco
  template:
    metadata:
      labels:
        app: marco
        fluentd.logger: "true"
    spec:
      containers:
        - name: marco-app
          image: gm50x/marco
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 10
            failureThreshold: 3
            periodSeconds: 15
            httpGet:
              path: /api/marco/healthz
              port: 3000
              httpHeaders:
                - name: X-My-Header
                  value: all-good
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: marco-service
spec:
  type: ClusterIP
  selector:
    app: marco
  ports:
    - name: marco-http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marco-srv-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/api/marco"
            pathType: Prefix
            backend:
              service:
                name: marco-service
                port:
                  number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polo
  labels:
    fluentd.logger: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polo
  template:
    metadata:
      labels:
        app: polo
        fluentd.logger: "true"
    spec:
      containers:
        - name: polo-app
          image: gm50x/polo
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 10
            failureThreshold: 3
            periodSeconds: 15
            httpGet:
              path: /api/polo/healthz
              port: 3000
              httpHeaders:
                - name: X-My-Header
                  value: all-good
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: polo-service
spec:
  type: ClusterIP
  selector:
    app: polo
  ports:
    - name: polo-http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polo-srv-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/api/polo"
            pathType: Prefix
            backend:
              service:
                name: polo-service
                port:
                  number: 3000
