k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/marco"
            backend:
              service:
                name: marco-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/polo"
            backend:
              service:
                name: polo-service
                port:
                  number: 3000
