k8s/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: gm50x/rabbitmq:3-management-delayed
          ports:
            - name: rmq-mngt
              containerPort: 15672
            - name: rmq-amqp
              containerPort: 5672
          resources:
            limits:
              memory: "2Gi"
              cpu: "2"
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq/mnesia
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-claim
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
    - name: rmq-mngt
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rmq-amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/rabbitmq"
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-clusterip-srv
                port:
                  number: 15672
---
